.metadata/.plugins/org.eclipse.cdt.ui/triangle3.build.log
16:27:05 **** Incremental Build of configuration Debug for project triangle3 ****
make all 
Building file: ../triangle3.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"triangle3.d" -MT"triangle3.o" -o "triangle3.o" "../triangle3.c"
../triangle3.c:7:8: error: ‘y1’ redeclared as different kind of symbol
 double y1;
        ^
In file included from /usr/include/features.h:367:0,
                 from /usr/include/stdio.h:27,
                 from ../triangle3.c:3:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:251:1: note: previous declaration of ‘y1’ was here
 __MATHCALL (y1,, (_Mdouble_));
 ^
../triangle3.c: In function ‘main’:
../triangle3.c:28:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘double *’ [-Wformat=]
  scanf("%d %d", &x1, &y1);
        ^
../triangle3.c:28:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 3 has type ‘double *’ [-Wformat=]
../triangle3.c:30:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘double *’ [-Wformat=]
  scanf("%d %d", &x2, &y2);
        ^
../triangle3.c:30:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 3 has type ‘double *’ [-Wformat=]
../triangle3.c:32:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘double *’ [-Wformat=]
  scanf("%d %d", &x3, &y3);
        ^
../triangle3.c:32:8: warning: format ‘%d’ expects argument of type ‘int *’, but argument 3 has type ‘double *’ [-Wformat=]
../triangle3.c:39:9: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
  printf("Length of AB %d \n", ab);
         ^
../triangle3.c:40:9: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
  printf("Length of BC %d \n", bc);
         ^
../triangle3.c:41:9: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
  printf("Length of CA %d \n", ca);
         ^
../triangle3.c:42:9: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
  printf("Circumference is %d \n", circumference(ab, bc, ca));
         ^
../triangle3.c:43:9: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘double’ [-Wformat=]
  printf("Area is %d \n", area(ab, bc, ca));
         ^
subdir.mk:18: recipe for target 'triangle3.o' failed
make: *** [triangle3.o] Error 1

16:27:05 Build Finished (took 235ms)

